--- a/book_builder.ipynb
+++ b/book_builder.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "59cf9b42",
+   "id": "cc4cfc45",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "31430469",
+   "id": "7aa3ad09",
    "metadata": {},
    "outputs": [
     {
@@ -190,8 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "65eb3c74",
+   "execution_count": 8,
+   "id": "166d159a",
    "metadata": {},
    "outputs": [
     {
@@ -208,33 +208,11 @@
       "done\n",
       "\u001b[01mmyst v0.15.2:\u001b[39;49;00m MdParserConfig(renderer='sphinx', commonmark_only=False, enable_extensions=['colon_fence', 'dollarmath', 'linkify', 'substitution', 'tasklist'], dmath_allow_labels=True, dmath_allow_space=True, dmath_allow_digits=True, dmath_double_inline=False, update_mathjax=True, mathjax_classes='tex2jax_process|mathjax_process|math|output_area', disable_syntax=[], url_schemes=['mailto', 'http', 'https'], heading_anchors=None, heading_slug_func=None, html_meta=[], footnote_transition=True, substitutions=[], sub_delimiters=['{', '}'], words_per_minute=200)\n",
       "\u001b[01mbuilding [mo]: \u001b[39;49;00mtargets for 0 po files that are out of date\n",
-      "\u001b[01mbuilding [html]: \u001b[39;49;00mtargets for 1 source files that are out of date\n",
-      "\u001b[01mupdating environment: \u001b[39;49;00m0 added, 1 changed, 0 removed\n",
-      "\u001b[01mreading sources... \u001b[39;49;00m[100%] \u001b[35mnotebooks/01_Regresion_Lineal\u001b[39;49;00m                        \n",
-      "Executing: notebooks/01_Regresion_Lineal in: C:\\Users\\josed\\Documents\\GitHub\\FIN214_Notes\\FIN124_JB\\notebooks\n",
-      "\n",
+      "\u001b[01mbuilding [html]: \u001b[39;49;00mtargets for 0 source files that are out of date\n",
+      "\u001b[01mupdating environment: \u001b[39;49;00m0 added, 0 changed, 0 removed\n",
       "\u001b[01mlooking for now-outdated files... \u001b[39;49;00mnone found\n",
-      "\u001b[01mpickling environment... \u001b[39;49;00mdone\n",
-      "\u001b[01mchecking consistency... \u001b[39;49;00mdone\n",
-      "\u001b[01mpreparing documents... \u001b[39;49;00mdone\n",
-      "\u001b[01mwriting output... \u001b[39;49;00m[ 50%] \u001b[32mintro\u001b[39;49;00m                                                 \n",
-      "\u001b[01mwriting output... \u001b[39;49;00m[100%] \u001b[32mnotebooks/01_Regresion_Lineal\u001b[39;49;00m                         \n",
-      "\n",
-      "\u001b[01mgenerating indices... \u001b[39;49;00mgenindex done\n",
-      "\u001b[01mwriting additional pages... \u001b[39;49;00msearch done\n",
-      "\u001b[01mcopying images... \u001b[39;49;00m[ 14%] \u001b[33mC:/Users/josed/Documents/GitHub/FIN214_Notes/FIN124_JB/_build/jupyter_execute/notebooks/01_Regresion_Lineal_4_1.png\u001b[39;49;00m\n",
-      "\u001b[01mcopying images... \u001b[39;49;00m[ 28%] \u001b[33mC:/Users/josed/Documents/GitHub/FIN214_Notes/FIN124_JB/_build/jupyter_execute/notebooks/01_Regresion_Lineal_7_1.png\u001b[39;49;00m\n",
-      "\u001b[01mcopying images... \u001b[39;49;00m[ 42%] \u001b[33mC:/Users/josed/Documents/GitHub/FIN214_Notes/FIN124_JB/_build/jupyter_execute/notebooks/01_Regresion_Lineal_10_1.png\u001b[39;49;00m\n",
-      "\u001b[01mcopying images... \u001b[39;49;00m[ 57%] \u001b[33mC:/Users/josed/Documents/GitHub/FIN214_Notes/FIN124_JB/_build/jupyter_execute/notebooks/01_Regresion_Lineal_13_1.png\u001b[39;49;00m\n",
-      "\u001b[01mcopying images... \u001b[39;49;00m[ 71%] \u001b[33mC:/Users/josed/Documents/GitHub/FIN214_Notes/FIN124_JB/_build/jupyter_execute/notebooks/01_Regresion_Lineal_28_0.png\u001b[39;49;00m\n",
-      "\u001b[01mcopying images... \u001b[39;49;00m[ 85%] \u001b[33mC:/Users/josed/Documents/GitHub/FIN214_Notes/FIN124_JB/_build/jupyter_execute/notebooks/01_Regresion_Lineal_32_0.png\u001b[39;49;00m\n",
-      "\u001b[01mcopying images... \u001b[39;49;00m[100%] \u001b[33mC:/Users/josed/Documents/GitHub/FIN214_Notes/FIN124_JB/_build/jupyter_execute/notebooks/01_Regresion_Lineal_36_0.png\u001b[39;49;00m\n",
-      "\n",
-      "\u001b[01mcopying static files... \u001b[39;49;00mdone\n",
-      "\u001b[01mcopying extra files... \u001b[39;49;00mdone\n",
-      "\u001b[01mdumping search index in English (code: en)... \u001b[39;49;00mdone\n",
-      "\u001b[01mdumping object inventory... \u001b[39;49;00mdone\n",
-      "\u001b[01mbuild succeeded, 4 warnings.\u001b[39;49;00m\n",
+      "\u001b[01mno targets are out of date.\u001b[39;49;00m\n",
+      "\u001b[01mbuild succeeded.\u001b[39;49;00m\n",
       "\n",
       "The HTML pages are in FIN124_JB\\_build\\html.\n",
       "\n",
@@ -250,16 +228,6 @@
       "\n",
       "\u001b[92m===============================================================================\u001b[0m\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: Execution Failed with traceback saved in C:\\Users\\josed\\Documents\\GitHub\\FIN214_Notes\\FIN124_JB\\_build\\html\\reports\\01_Regresion_Lineal.log\u001b[39;49;00m\n",
-      "\u001b[91mC:\\Users\\josed\\Documents\\GitHub\\FIN214_Notes\\FIN124_JB\\notebooks\\01_Regresion_Lineal.ipynb:10002: WARNING: Non-consecutive header level increase; 0 to 2 [myst.header]\u001b[39;49;00m\n",
-      "\u001b[91mC:\\Users\\josed\\Documents\\GitHub\\FIN214_Notes\\FIN124_JB\\notebooks\\01_Regresion_Lineal.ipynb:160002: WARNING: Non-consecutive header level increase; 0 to 2 [myst.header]\u001b[39;49;00m\n",
-      "\u001b[91mC:\\Users\\josed\\Documents\\GitHub\\FIN214_Notes\\FIN124_JB\\notebooks\\01_Regresion_Lineal.ipynb:230002: WARNING: Non-consecutive header level increase; 0 to 2 [myst.header]\u001b[39;49;00m\n"
      ]
     }
    ],
